--- a/index.html
+++ b/index.html
@@ -101,15 +101,21 @@
 
       /* 2. generace (vzorek) */
       { title:"G.N.O.", artist:"Wonder Girls", release_date:"2011-11-07", generation:2, youtube:"https://youtu.be/ttJpY9pmSO8" },
+{ title:"Irony.", artist:"Wonder Girls", release_date:"2007-02-13", generation:2, youtube:"https://www.youtube.com/watch?v=uxFxoLxmcdg&list=RDuxFxoLxmcdg&start_radio" },
       { title:"Nobody", artist:"Wonder Girls", release_date:"2008-10-29", generation:2, youtube:"https://youtu.be/9f9qK2Jx5uY" },
+{ title:"Love Sick", artist:"FTISLAND", release_date:"2007-01-05", generation:2, youtube:"https://www.youtube.com/watch?v=gnLwCb8Cz7I" },
       { title:"Gee", artist:"Girls' Generation", release_date:"2009-01-05", generation:2, youtube:"https://youtu.be/U7mPqycQ0tQ" },
+{ title:"Replay", artist:"SHINee", release_date:"2008-05-22", generation:2, youtube:"https://www.youtube.com/watch?v=VTASffPQGhY&list=RDVTASffPQGhY&start_radio" },
       { title:"Oh!", artist:"Girls' Generation", release_date:"2010-02-18", generation:2, youtube:"https://youtu.be/Tk6m6h7dH_Y" },
       { title:"Fire", artist:"2NE1", release_date:"2009-05-06", generation:2, youtube:"https://youtu.be/73Wx4p5eF9w" },
       { title:"I Am The Best", artist:"2NE1", release_date:"2011-06-24", generation:2, youtube:"https://youtu.be/9D0g2U6mGgQ" },
       { title:"Lies", artist:"Big Bang", release_date:"2007-08-08", generation:2, youtube:"https://youtu.be/SLY5WcN5M9g" },
+{ title:"10 out of 10", artist:"2PM", release_date:"2008-08-29", generation:2, youtube:"https://www.youtube.com/watch?v=YEmRoYV8vMs" },
       { title:"Haru Haru", artist:"Big Bang", release_date:"2008-01-01", generation:2, youtube:"https://youtu.be/0jkg2Dap6Ts" },
       { title:"Bad Girl Good Girl", artist:"miss A", release_date:"2010-06-30", generation:2, youtube:"https://youtu.be/3K8nG9IybJ4" },
       { title:"Electric Shock", artist:"f(x)", release_date:"2012-06-10", generation:2, youtube:"https://youtu.be/n8I8QGFA1oM" },
+{ title:"Not Young", artist:"U-KISS", release_date:"2008-09-03", generation:2, youtube:"https://www.youtube.com/watch?v=eNWr4qixDSY&list=RDeNWr4qixDSY&start_radio" },
+{ title:"Lost Child", artist:"IU", release_date:"2008-09-23", generation:2, youtube:"https://www.youtube.com/watch?v=0ZukHxqOA0o" },
 
       /* 3. generace */
       { title:"Like OOH-AHH", artist:"TWICE", release_date:"2015-10-20", generation:3, youtube:"https://youtu.be/0rtV5esQT6I" },
@@ -130,9 +136,9 @@
       { title:"Tuxedo", artist:"XG", release_date:"2023-11-10", generation:5, youtube:"https://youtu.be/placeholder" },
 
       /* další populární písně pro lepší pokrytí (směs generací) */
-      { title:"EVERGLOW", artist:"LADIDA", release_date:"2005-08-09", generation:1, youtube:"https://youtu.be/NoYKBAajoyo?si=iRzGdbBI4iBtkf0m" },
-{ title:"EVERGLOW", artist:"nugus", release_date:"2005-08-10", generation:1, youtube:"https://youtu.be/GbbLD54pNM0?si=rxzZ9o71fOIzd8cz" },
-      { title:"Nobody (g.o.d)", artist:"g.o.d", release_date:"2000-12-05", generation:1, youtube:"https://youtu.be/3Kk13KpG1Wg" },
+      { title:"Break It", artist:"KARA", release_date:"2007-03-29", generation:2, youtube:"https://www.youtube.com/watch?v=9NIYJ8A5R0s&list=RD9NIYJ8A5R0s&start_radio" },
+{ title:"Into The New World", artist:"SNSD", release_date:"2007-08-10", generation:2, youtube:"https://youtu.be/GbbLD54pNM0?si=rxzZ9o71fOIzd8cz" },
+      { title:"Nobody (g.o.d)", artist:"g.o.d", release_date:"2000-08-03", generation:1, youtube:"https://youtu.be/3Kk13KpG1Wg" },
       { title:"I Need U", artist:"BTS", release_date:"2015-04-29", generation:3, youtube:"https://youtu.be/xEeFrLSkMm8" },
       { title:"Growl", artist:"EXO", release_date:"2013-06-03", generation:3, youtube:"https://youtu.be/ettQSOgWmM0" },
       { title:"Call Me Baby", artist:"EXO", release_date:"2015-03-30", generation:3, youtube:"https://youtu.be/Fu2p9kGx5IY" },
