--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       { title:"Blue & Grey", artist:"BTS", release_date:"2020-11-20", generation:4, youtube:"https://youtu.be/t3g0M9Q1Udo" }
     ];
 const artistBackgrounds = {
-  "Girls' Generation": "https://github.com/KXPOPCZ/kxpopcalendar/blob/main/GirlsGeneration.jpg",
+  "Girls' Generation": "https://github.com/KXPOPCZ/kxpopcalendar/blob/main/GirlsGeneration.jpg?raw=true",
   "Wonder Girls": "https://tvujgithub.com/images/wonder_girls.jpg",
   "BLACKPINK": "https://tvujgithub.com/images/blackpink.jpg",
   "TWICE": "https://tvujgithub.com/images/twice.jpg",
