--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   background-size: cover;
   background-position: center;
   transition: background-image 0.5s ease-in-out;
-  box-shadow: inset 0 0 0 1000px rgba(7, 24, 39, 0.75);
+  /*box-shadow: inset 0 0 0 1000px rgba(7, 24, 39, 0.75)*/;
 }
     .calendar{padding:12px;border-radius:10px;}
     .month-row{display:flex;align-items:center;justify-content:space-between;margin-bottom:8px;}
