--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     button{cursor:pointer;}
     .calendar-wrap{display:grid;grid-template-columns:1fr 360px;gap:14px;}
 .calendar {
+  background-image: url("GirlsGeneration.jpg");
+  background-size: cover;
+  background-position: center;
   position: relative;
   background-size: cover;
   background-position: center;
