--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     button{cursor:pointer;}
     .calendar-wrap{display:grid;grid-template-columns:1fr 360px;gap:14px;}
 .calendar {
-  background-image: url("GirlsGeneration.jpg");
+  background-image: url("https://raw.githubusercontent.com/KXPOPCZ/kxpopcalendar/refs/heads/main/GirlsGeneration.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
